# BackMeUp

./: Cargo.toml  README.md  setup_macos_linux.sh  setup_windows.bat
assets/: icon.icns
src/: audio.rs  backup.rs  backup_program.rs  config_program.rs  cpu_evaluation.rs  display_window.rs  main.rs  mouse_tracker.rs  service.rs  uninstall_service.rs
