[package]
name = "Group16"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "config_program"
path = "src/config_program.rs"

[[bin]]
name = "backup_program"
path = "src/backup_program.rs"

[[bin]]
name = "uninstall_service"
path = "src/uninstall_service.rs"

[[bin]]
name = "service"
path = "src/service.rs"

[target.'cfg(windows)'.windows]
subsystem = "windows"


[features]
default = []

[dependencies]
sysinfo = "0.31.4"
log = "0.4.14"
chrono = "0.4.19"

rdev = "0.5"
rodio = "0.19.0"
eframe = "0.29.0"
egui = "0.29.0"
fs_extra = "1.3.0"
serde = { version = "1.0.210", features = ["derive"] }
toml = "0.8.19"
rfd = "0.15.0"
service-manager = "0.7"
windows-sys = { version = "0.59.0", features = ["Win32_Foundation", "Win32_System_RemoteDesktop"] }
windows-service = "0.7.0"
quick-xml = "0.37.2"
walkdir = "2.5.0"

[build-dependencies]
windows = {version = "0.58.0", optional = true}
core-graphics = {version = "0.24.0", optional = true}
x11 = {version = "2.21.0", optional = true}

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = "0.58.0"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2.21.0"


[package.metadata.bundle]
name = "BackMeUp"
identifier = "com.backmeup"
icon = ["assets/icon.icns"]
resources = ["assets/"]

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"



